update: retrieve only relevant protocol and feature info using a protocol graphql client